# modal_seq

./: Cargo.toml  README.md
src/: lib.rs  main.rs  midi.rs  scale.rs  semitone.rs  sequencer.rs
